--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       // Move ISS function
       function moveISS() {
-        fetch('http://api.open-notify.org/iss-now.json')
+        fetch('https://api.open-notify.org/iss-now.json')
           .then(response => response.json())
           .then(data => {
             var lat = data.iss_position.latitude;
@@ -175,7 +175,7 @@
     }
 
     // Fetch data from People in Space API
-    fetch('http://api.open-notify.org/astros.json')
+    fetch('https://api.open-notify.org/astros.json')
       .then(response => response.json())
       .then(data => {
         // Display information about each person
