--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     }
 
     // Fetch data from People in Space API
-    $.getJSON('https://api.open-notify.org/astros.json', function(data) {
+    $.getJSON('https://api.wheretheiss.at/v1/astros', function(data) {
       // Display information about each person
       displayPeople(data.people);
 
