--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       // Move ISS function
       function moveISS() {
-        fetch('https://api.wheretheiss.at/v1/satellites/25544')
+        fetch('http://api.open-notify.org/iss-now.json')
           .then(response => response.json())
           .then(data => {
             var lat = data.latitude;
