--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div class="form-group">
           <label for="sort">Sort By:</label>
           <select id="sort" class="form-control">
+            <option value="">Select</option>
             <option value="name">First Name</option>
             <option value="lastName">Last Name</option>
           </select>
